refactor: 중복 정렬 로직 sortRecipes()로 분리 및 generateImageUrl 적용 일관화